# rohan

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  UI_README.md  coverage_output.txt  debug_orders.py  pyproject.toml
.agent/workflows/: execute_phase.md
.github/: copilot-instructions.md
.github/agents/: architect.agent.md
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: adversarial_scenario_plan.md  agentic_framework.drawio  agentic_framework_presentation.drawio  code_review_todo.md  framework.drawio  framework_plan.md  framework_presentation.drawio  hasufel-feature-request-rich-metrics.md  implementation_plan.md  implementation_plan_abides_capabilities.md  presentation_marp.md  presentation_outline.md  presentation_outline_compact.md  presentation_prompt.md  technical_architecture.md
docs/abides/: ABIDES_CONFIG_SYSTEM.md  ABIDES_CUSTOM_AGENT_IMPLEMENTATION_GUIDE.md  ABIDES_DATA_EXTRACTION.md  ABIDES_INTERFACE_REVIEW.md  ABIDES_METRICS_API.md  ABIDES_REFERENCE.md  HASUFEL_CONFIG_SYSTEM.md  HASUFEL_CUSTOM_AGENT_GUIDE.md  HASUFEL_DATA_EXTRACTION.md  HASUFEL_LLM_GOTCHAS.md  HASUFEL_METRICS_API.md  HASUFEL_PARALLEL_SIMULATION.md  HASUFEL_README.md  PARALLEL_SIMULATION_GUIDE.md  README.md
docs/abides_reference_documentation/: ABIDES_REFERENCE.md  PARALLEL_SIMULATION_GUIDE.md
docs/archive/: rohan_project_proposal.md
docs/development/: ABIDES_CUSTOM_AGENT_IMPLEMENTATION_GUIDE.md  abides_api_reference.md  analytics_improvement_plan.md
docs/functional/: metrics_definition.md  rohan_project_proposal.md
docs/llm/: ABIDES_CUSTOM_AGENT_IMPLEMENTATION_GUIDE.md  ABIDES_LLM_INTEGRATION_GOTCHAS.md
docs/technical/: ABIDES_DATA_EXTRACTION.md  abides_agent_assessment.md  adversarial_scenario_system.md  cost_benefit_analysis.md  data_pipeline_reference.md  llm_refinement_observability.md  llm_refinement_resilience_plan.md  scenario_customizability_plan.md  target_architecture.md  technical_architecture.md
docs/technical/archive/: phase1_historical_data_hardening_design.md
notebooks/: demo_ABIDES-Markets.ipynb  generate_historical_data.ipynb  pipeline_validation.ipynb  quickstart.ipynb
notebooks/log/1769255813/: summary_log.bz2
src/rohan/: __init__.py  exceptions.py
src/rohan/abides-wrapper/: abides_wrapper.py
src/rohan/abides_wrapper/: __init__.py  abides_config_mapper.py  abides_output.py  abides_wrapper.py  random_state_handler.py
src/rohan/config/: __init__.py  agent_settings.py  database_settings.py  feature_flags.py  latency_settings.py  llm_settings.py  secrets_settings.py  simulation_settings.py
src/rohan/framework/: __init__.py  analysis_models.py  analysis_service.py  init_db.py  iteration_pipeline.py  prompts.py  refinement_repository.py  repository.py  scenario_repository.py  simulation_engine.py
src/rohan/framework/database/: __init__.py  database_connector.py  init_db.py  models.py
src/rohan/llm/: __init__.py  cli.py  factory.py  graph.py  models.py  nodes.py  planner.py  prompts.py  scenario_tools.py  scoring.py  state.py  telemetry.py  tools.py
src/rohan/simulation/: __init__.py  simulation_output.py  simulation_runner.py  simulation_service.py  strategy_validator.py  utils.py
src/rohan/simulation/abides_impl/: __init__.py  abides_config_mapper.py  abides_output.py  config_builder.py  hasufel_output.py  random_state_handler.py  simulation_runner_abides.py  strategic_agent_adapter.py  strategic_agent_config.py
src/rohan/simulation/data/: __init__.py  api_provider.py  csv_provider.py  database_provider.py  generator.py  models.py  normalization.py  provider_protocol.py
src/rohan/simulation/models/: __init__.py  schemas.py  simulation_metrics.py  simulation_output.py  simulation_result.py  strategy_api.py  strategy_spec.py  validation.py
src/rohan/ui/: 0_Terminal.py  README.md  __init__.py  __main__.py  app.py  charts.py  metrics.py
src/rohan/ui/pages/: 1_Refinement_Lab.py
src/rohan/ui/utils/: baseline_comparison.py  components.py  descriptions.py  metric_display.py  presets.py  startup.py  theme.py
src/rohan/utils/: __init__.py  formatting.py
tests/: __init__.py  conftest.py  test_abides_config_mapper.py  test_abides_integration.py  test_abides_output.py  test_agent_metrics.py  test_analysis.py  test_batch_simulation.py  test_compute_metrics_smoke.py  test_data_pipeline.py  test_defensive_guards.py  test_deterministic_scoring.py  test_feature_flags.py  test_hasufel_delegation.py  test_historical_integration.py  test_integration.py  test_iteration_pipeline.py  test_llm_factory.py  test_llm_graph.py  test_llm_models.py  test_llm_nodes.py  test_llm_prompts.py  test_llm_settings.py  test_llm_state.py  test_llm_telemetry.py  test_llm_tools.py  test_metric_display.py  test_planner.py  test_property_based.py  test_random_state_handler.py  test_refinement_repository.py  test_repository.py  test_reproducibility.py  test_rich_analysis.py  test_saved_models.py  test_scenario_repository.py  test_scenario_tools.py  test_schemas.py  test_scoring.py  test_session_repository.py  (+17 more)
