[project]
name = "rohan"
version = "0.1.1-dev"
description = "Risk Optimization with Heuristic Agent Network"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
keywords = ["trading", "llm", "agents", "reinforcement-learning", "risk-optimization", "algorithmic-trading"]

dependencies = [
    "abides-rohan",
    "numpy>=1.26.0",
    "pandas>=2.2.0,<3.0.0",
    "pandera>=0.22.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "langgraph>=1.0.8",
    "langchain>=0.3",
    "langchain-openai>=0.2",
]

[project.optional-dependencies]
llm = [
    "langchain-google-genai>=2.0",
]

[project.urls]
Homepage = "https://github.com/GabrieleDiCorato/rohan"
Repository = "https://github.com/GabrieleDiCorato/rohan"
Issues = "https://github.com/GabrieleDiCorato/rohan/issues"

[project.scripts]
ui = "rohan.ui.__main__:main"
refine = "rohan.llm.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "ipykernel>=7.1.0",
    "nbstripout>=0.9.0",
    "pyright>=1.1.408",
]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.100.0",
]
ui = [
    "streamlit>=1.42.0",
    "altair>=5.0.0",
    "plotly>=6.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 200
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"src/rohan/ui/*.py" = ["N999"]
"src/rohan/ui/pages/*.py" = ["N999"]

[tool.ruff.lint.isort]
known-first-party = ["rohan"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src/rohan",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/rohan"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "src/rohan/ui/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.uv.sources]
abides-rohan = { git = "https://github.com/GabrieleDiCorato/abides-jpmc-public.git", rev = "v1.2.6-rohan" }
